--- a/src/feedPage/Feed.css
+++ b/src/feedPage/Feed.css
@@ -16,6 +16,10 @@
     width: 500px;
     height: 300px;
 }
+.b > img{
+    width: 400px;
+    height: 200px;
+}
 .c{
     border: 1px solid black;
     width: 250px;
