--- a/src/feedPage/Feed.css
+++ b/src/feedPage/Feed.css
@@ -1,46 +1,59 @@
-.te{
-    border: 1px solid black;
+.feed-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 120px;
+}
+.feed {
     width: 500px;
-    height: 650px;
-    text-align: center;
-    margin-top: 40px;
-    margin-left: 150px;
+    margin-bottom: 50px;
+    background-color: white;
+    border-radius: 5px;
+    border: 2px solid black;
 
 }
-.a{
-    border: 1px solid black;
-    width: 500px;
-    height: 100px;
+.feed-header{
+    width: 100%;
+    height: 7%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
 }
-.b{
-    border: 1px solid black;
-    width: 500px;
-    height: 300px;
+.feed-header-left{
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    padding-left: 15px;
+
 }
-.b > img{
-    width: 400px;
-    height: 200px;
+.feed-header-right{
+    width: 100%;
+    display: flex;
+    justify-content: end;
+    padding-right: 15px;
 }
-.c{
-    border: 1px solid black;
-    width: 250px;
-    height: 100px;
-    display: inline-block;
-    float: left;
-}
-.d{
-    display: inline-block;
+
+.feed-photo{
+    width: 100%;
+    height: 65%;
     border: 1px solid red;
-    width: 200px;
-    height: 100px;
-    float: right;
-}
-.e{
 
-    border: 3px solid orange;
-    text-align: left;
 }
-.f{
-    border: 2px solid green;
-    height: 150px;
+.photo{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.feed-body{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    height: 6%;
+}
+.feed-content{
+    padding-top: 10px;
+    padding-left: 15px;
+    font-size: 14px;
 }
