--- a/src/feedPage/Feed.css
+++ b/src/feedPage/Feed.css
@@ -37,7 +37,7 @@
 .feed-photo{
     width: 100%;
     height: 65%;
-    border: 1px solid red;
+    /*border: 1px solid red;*/
 
 }
 .photo{
@@ -46,6 +46,7 @@
     object-fit: cover;
 }
 .feed-body{
+    margin-top: 30px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
