--- a/src/feedPage/FeedInsert.css
+++ b/src/feedPage/FeedInsert.css
@@ -1,16 +1,18 @@
 .feed-insert{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    margin-top: 120px;
-
+    /*align-items: center;*/
+    margin-top: 80px;
+    height: 700px;
     border: 1px solid red;
 
 }
 .feed-insert-body{
-    width: 500px;
-    /*margin-bottom: 50px;*/
+    height: 620px;
     border-radius: 6px;
     border: 2px solid black;
-    height: 300px;
+}
+
+.feed-insert-button{
+    float: right;
 }
