--- a/src/feedPage/FeedPicture.css
+++ b/src/feedPage/FeedPicture.css
@@ -5,3 +5,4 @@
     height: 300px;
     grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
 }
+.imagePreview{border:2px solid black; width:500px; height:500px}
