--- a/src/mypage/MyPage.css
+++ b/src/mypage/MyPage.css
@@ -196,3 +196,22 @@
     width: 30%;
     height: 51.5px;
 }
+.searchUserList{
+    border: 1px solid tomato;
+    width: 95%;
+    height: 610px;
+    margin-left: 10px;
+    margin-top: 7px;
+}
+.followAcceptList{
+    border: 1px solid tomato;
+    width: 95%;
+    height: 610px;
+    margin-left: 10px;
+    margin-top: 7px;
+}
+.sUserList{
+    border: 1px solid palevioletred;
+    width: 100%;
+    margin-top: 5px;
+}
