--- a/src/feedPage/FeedInsert.css
+++ b/src/feedPage/FeedInsert.css
@@ -1,10 +1,10 @@
 .feed-insert{
     display: flex;
-    flex-direction: column;
-    /*align-items: center;*/
-    margin-top: 80px;
-    height: 700px;
-    border: 1px solid red;
+/*    flex-direction: column;*/
+/*    !*align-items: center;*!*/
+/*    margin-top: 80px;*/
+/*    height: 700px;*/
+/*    border: 1px solid red;*/
 
 }
 .feed-insert-body{
