--- a/src/ToDoListPage/MainPage.css
+++ b/src/ToDoListPage/MainPage.css
@@ -1,7 +1,7 @@
 .outer{
     border: 1px solid black;
-    width: 1900px;
-    height: 1000px;
+    width: 100%;
+    height: 95vh;
     margin: auto;
     margin-top: 100px;
 }
@@ -11,6 +11,18 @@
     height: 100%;
     float: left;
     background-color: gainsboro;
+}
+.outer_Temp{
+    border: 1px solid green;
+    width: 95%;
+    height: 100%;
+    margin: 5px;
+
+    float: left;
+    /*margin-top: 0px;*/
+    position: relative;
+    overflow: scroll;
+
 }
 .outer_pro{
     border: 1px solid blue;
@@ -45,13 +57,7 @@
     margin: auto;
     margin-top: 0px;
 }
-.outer_Temp{
-    border: 1px solid tomato;
-    width: 85%;
-    height: 65%;
-    margin: auto;
-    margin-top: 0px;
-}
+
 .outer_btn{
     border: 1px solid salmon;
     margin: auto;
@@ -136,15 +142,7 @@
     box-sizing: border-box;
     background-color: coral;
 }
-.outer_content{
-    border: 1px solid thistle;
-    width: 69%;
-    height: 43%;
-    float: right;
-    margin-top: -120px;
-    box-sizing: border-box;
-    background-color: darkcyan;
-}
+
 .outer_nick{
     border: 1px solid steelblue;
     width: 69%;
