--- a/src/challengeChat/challenge.css
+++ b/src/challengeChat/challenge.css
@@ -74,3 +74,9 @@
     overflow:auto;
 	list-style:none;
 }
+#hbtn:hover{
+    letter-spacing: 10px;
+    transform: scale(1.3);
+    cursor: pointer;
+    transition: all 0.5s;
+  }
