--- a/src/feedPage/Feed.css
+++ b/src/feedPage/Feed.css
@@ -8,12 +8,12 @@
 }
 
 .feed {
-    width: 36%;
+    width: 500px;
+    height: 800px;
     margin-bottom: 50px;
     background-color: white;
     border-radius: 5px;
     border: 2px solid black;
-
 }
 
 .feed-header {
@@ -22,32 +22,33 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-
 }
-
 .feed-header-left {
-    width: 100%;
+    width: 60%;
     display: flex;
     justify-content: flex-start;
     padding-left: 15px;
-
+    border:1px solid red;
 }
-
+.feed-header-center{
+    border:1px solid blue;
+    width: 200px;
+}
 .feed-header-right {
-    width: 100%;
+    width: 50%;
+    border:1px solid red;
 }
 
 .feed-photo {
     width: 100%;
-    height: 65%;
+    /*height: 60%;*/
     /*border: 1px solid red;*/
 }
-
-.photo {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
+/*.photo {*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*    object-fit: cover;*/
+/*}*/
 
 .feed-body {
     margin-top: 30px;
