--- a/src/feedPage/FeedPicture.css
+++ b/src/feedPage/FeedPicture.css
@@ -1,8 +1,8 @@
-.imageCon{
-    margin-top: 200px;
-    width: 300px;
-    display: grid;
-    height: 300px;
-    grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
-}
-.imagePreview{border:2px solid black; width:1000px; height:500px}
+/*.imageCon{*/
+/*    margin-top: 200px;*/
+/*    width: 300px;*/
+/*    display: grid;*/
+/*    height: 300px;*/
+/*    grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));*/
+/*}*/
+/*.imagePreview{border:2px solid black; width:1000px; height:500px}*/
