--- a/src/template/style/TemplateList.css
+++ b/src/template/style/TemplateList.css
@@ -1,6 +1,6 @@
 .template-list{
     display: inline-block;
-    width: 800px;
+    width: 50%;
     /*margin: auto;*/
     margin-left: 200px;
     /*border: 1px solid red;*/
