--- a/src/mypage/MyPage.css
+++ b/src/mypage/MyPage.css
@@ -277,3 +277,18 @@
     font-family: 'SourceSansPro-Light';
 }
 
+.scrollBar::-webkit-scrollbar {
+    width: 7px;  /* 스크롤바의 너비 */
+    height: 0px;
+}
+
+.scrollBar::-webkit-scrollbar-thumb {
+    height: 30%; /* 스크롤바의 길이 */
+    background: white; /* 스크롤바의 색상 */
+    
+    border-radius: 10px;
+}
+
+.scrollBar::-webkit-scrollbar-track {
+    /* background: rgba(33, 122, 244, .1);  스크롤바 뒷 배경 색상 */
+}
