--- a/src/ToDoListPage/calendar/Calendar.css
+++ b/src/ToDoListPage/calendar/Calendar.css
@@ -146,4 +146,12 @@
     display: flex;
     margin-left: 1px;
   }
+  .dot2 {
+    height: 8px;
+    width: 8px;
+    background-color: #9d0da7;
+    border-radius: 50%;
+    display: flex;
+    margin-left: 1px;
+  }
   
