--- a/src/feedPage/FeedInsert.css
+++ b/src/feedPage/FeedInsert.css
@@ -12,3 +12,9 @@
 .feed-insert-button{
     float: right;
 }
+#feedInsertBtn:hover{
+    letter-spacing: 10px;
+    transform: scale(1.3);
+    cursor: pointer;
+    transition: all 0.5s;
+  }
