--- a/src/mypage/MyPage.css
+++ b/src/mypage/MyPage.css
@@ -1,10 +1,11 @@
 .outer_my{
     /* border: 1px solid black; */
     width: 1500px;
-    height: 1000px;
+    height: 1200px;
     margin: auto;
     margin-top: -0px;
-    margin-left: 120px;
+    margin-left: 290px;
+    position: absolute;
 }
 /* .outer_date{
     border: 1px solid red;
@@ -15,7 +16,7 @@
 .outer_prof{
     /* border: 1px solid blue; */
     width: 56.4%;
-    height: 100%;
+    height: 85%;
     float: left;
 }
 /* .outer_menu{
@@ -160,13 +161,10 @@
     border-radius: 50%;
     background-color: gainsboro;
 }
-.outer_sub{
-    border: 1px solid red;
-    height: 677px;
-}
+
 .outer_feedImg{
     border: 1px solid blue;
-    width: 60%;
+    width: 80%;
     height: 90%;
     float: left;
 }
@@ -288,7 +286,19 @@
     
     border-radius: 10px;
 }
-
-.scrollBar::-webkit-scrollbar-track {
-    /* background: rgba(33, 122, 244, .1);  스크롤바 뒷 배경 색상 */
+#hbtn:hover{
+    letter-spacing: 10px;
+    transform: scale(1.3);
+    cursor: pointer;
+    transition: all 0.5s;
+  }
+.outer_Feed::-webkit-scrollbar {
+    width: 7px;  /* 스크롤바의 너비 */
+    height: 0px;
+}
+.outer_Feed::-webkit-scrollbar-thumb {
+    height: 30%; /* 스크롤바의 길이 */
+    background: white; /* 스크롤바의 색상 */
+    
+    border-radius: 10px;
 }
