--- a/src/feedPage/FeedDetail.css
+++ b/src/feedPage/FeedDetail.css
@@ -1,8 +1,8 @@
-.container{
+/* .container{
     display: flex;
     border: 1px solid red;
     height: 800px;
-}
+} */
 .Area{
     width: 100%;
     height: 100%;
