--- a/src/ToDoListPage/menubar/Menubar2.css
+++ b/src/ToDoListPage/menubar/Menubar2.css
@@ -4,14 +4,19 @@
     border: 1px solid pink;
     width: 45%;
     height: 100%;
-    float: left;
+    /*float: left;*/
     /*margin: auto;*/
 }
 .menuBar{
     /*padding: 1rem; */
     background: white;
     width: 100%;
+    height: 13%;
     margin-bottom: 1rem;
+}
+.contentArea{
+    width: 100%;
+    height: 83%;
 }
 .tabs {
     height: 13%;
@@ -25,10 +30,4 @@
 }
 .tabs li.active{
     color: black;
-    height: 100%;
-}
-.contentArea{
-    height: 87%;
-    width: 100%;
-    border: 1px solid red;
 }
