--- a/src/ToDoListPage/calendar/Calendar.css
+++ b/src/ToDoListPage/calendar/Calendar.css
@@ -107,14 +107,20 @@
   /*오늘 날짜*/
   .react-calendar__tile--now {
     background: #fdfd0b;
+    background: linear-gradient(70deg, rgba(230, 255, 0, 0.85), rgba(0, 149, 255, 0.46));
+    background-image: -webkit-linear-gradient(90deg, rgba(0, 68, 255, 0.41), rgba(195, 255, 0, 0.37));
+    background-image: linear-gradient(-20deg, rgba(0, 123, 255, 0.96), rgba(204, 255, 0, 0.6));
+    background-image: linear-gradient(0deg, rgba(195, 255, 0, 0.45), rgba(0, 64, 255, 0.98));
     color: #090909;
     font-weight: bolder;
-    border-radius: 18px;
+    border-radius: 30px;
   }
   /*오늘 날짜 hover*/
   .react-calendar__tile--now:enabled:hover,
   .react-calendar__tile--now:enabled:focus {
     background: #ffffa9;
+    background: linear-gradient(90deg, rgba(230, 255, 0, 0.85), rgba(0, 149, 255, 0.46));
+    background-image: linear-gradient(0deg, rgba(195, 255, 0, 0.45), rgba(0, 64, 255, 0.98));
   }
   .react-calendar__tile--hasActive {
     background: #76baff;
@@ -126,14 +132,17 @@
   /*???? */
   .react-calendar__tile--active {
     background: #63097f;
+    background : linear-gradient(-20deg, #b721ff 0%, #21d4fd 100%);
+    /* background-image: linear-gradient(135deg, rgb(253, 135, 235), rgb(93, 114, 254)); */
     color: rgb(255, 255, 255);
     font-weight: bold;
-    border-radius: 18px;
+    border-radius: 30px;
   }
   /*선택된 날짜 */
   .react-calendar__tile--active:enabled:hover,
   .react-calendar__tile--active:enabled:focus {
     background:  #63097f;
+    background : linear-gradient(-20deg, #b721ff 0%, #21d4fd 100%);
   }
   .react-calendar--selectRange .react-calendar__tile--hover {
     background-color: #e6e6e6;
