--- a/src/ToDoListPage/calendar/Calendar.css
+++ b/src/ToDoListPage/calendar/Calendar.css
@@ -39,9 +39,10 @@
     outline: none;
     font-size: 15.5px;
   }
+  /*날짜 버튼 호버*/
   .react-calendar button:enabled:hover {
     cursor: pointer;
-    border-radius: 18px;
+    border-radius: 30px;
   }
   .react-calendar__navigation {
     display: flex;
@@ -58,10 +59,10 @@
   .react-calendar__navigation button:disabled {
     background-color: #f0f0f0;
   }
-  .react-calendar__navigation button:enabled:hover,
+  /* .react-calendar__navigation button:enabled:hover,
   .react-calendar__navigation button:enabled:focus {
-    background-color: #e6e6e6;
-  }
+     background-color: #e6e6e6; 
+  } */
   /* 요일 버튼*/
   .react-calendar__month-view__weekdays {
     text-align: center;
@@ -106,21 +107,18 @@
   }
   /*오늘 날짜*/
   .react-calendar__tile--now {
-    background: #fdfd0b;
-    background: linear-gradient(70deg, rgba(230, 255, 0, 0.85), rgba(0, 149, 255, 0.46));
-    background-image: -webkit-linear-gradient(90deg, rgba(0, 68, 255, 0.41), rgba(195, 255, 0, 0.37));
-    background-image: linear-gradient(-20deg, rgba(0, 123, 255, 0.96), rgba(204, 255, 0, 0.6));
-    background-image: linear-gradient(0deg, rgba(195, 255, 0, 0.45), rgba(0, 64, 255, 0.98));
-    color: #090909;
+    color: #ffffff;
     font-weight: bolder;
     border-radius: 30px;
+    background-image: linear-gradient(60deg, #abecd6 0%, #fee74f 100%);
+    background : linear-gradient(60deg, #b721ff 0%, #21d4fd 100%);
   }
   /*오늘 날짜 hover*/
   .react-calendar__tile--now:enabled:hover,
   .react-calendar__tile--now:enabled:focus {
     background: #ffffa9;
-    background: linear-gradient(90deg, rgba(230, 255, 0, 0.85), rgba(0, 149, 255, 0.46));
-    background-image: linear-gradient(0deg, rgba(195, 255, 0, 0.45), rgba(0, 64, 255, 0.98));
+    background-image: linear-gradient(60deg, #abecd6 0%, #fee74f 100%);
+    background : linear-gradient(60deg, #b721ff 0%, #21d4fd 100%);
   }
   .react-calendar__tile--hasActive {
     background: #76baff;
@@ -132,17 +130,18 @@
   /*???? */
   .react-calendar__tile--active {
     background: #63097f;
-    background : linear-gradient(-20deg, #b721ff 0%, #21d4fd 100%);
-    /* background-image: linear-gradient(135deg, rgb(253, 135, 235), rgb(93, 114, 254)); */
+    background : linear-gradient(60deg, #b721ff 0%, #21d4fd 100%);
     color: rgb(255, 255, 255);
     font-weight: bold;
     border-radius: 30px;
+    background-image: linear-gradient(60deg, #abecd6 0%, #fee74f 100%);
   }
   /*선택된 날짜 */
   .react-calendar__tile--active:enabled:hover,
   .react-calendar__tile--active:enabled:focus {
     background:  #63097f;
-    background : linear-gradient(-20deg, #b721ff 0%, #21d4fd 100%);
+    background : linear-gradient(60deg, #b721ff 0%, #21d4fd 100%);
+    background-image: linear-gradient(60deg, #abecd6 0%, #fee74f 100%);
   }
   .react-calendar--selectRange .react-calendar__tile--hover {
     background-color: #e6e6e6;
@@ -159,6 +158,7 @@
     height: 8px;
     width: 8px;
     background-color: #9d0da7;
+    box-shadow: 10px;
     border-radius: 50%;
     display: flex;
     margin-left: 1px;
