--- a/src/ToDoListPage/menubar/Menubar2.css
+++ b/src/ToDoListPage/menubar/Menubar2.css
@@ -1,10 +1,11 @@
 .menubar-box{
     box-sizing: border-box;
     display: inline-block;
-    border: 1px solid pink;
-    width: 45%;
+    /*border: 10px solid pink;*/
+    width: 63%;
     height: 100%;
     float: left;
+
     /*margin: auto;*/
 }
 .menuBar{
@@ -30,5 +31,4 @@
 .contentArea{
     height: 87%;
     width: 100%;
-    border: 1px solid red;
 }
