--- a/src/feedPage/Feed.css
+++ b/src/feedPage/Feed.css
@@ -27,7 +27,7 @@
     display: flex;
     justify-content: flex-start;
     padding-left: 15px;
-    border:1px solid red;
+    /*border:1px solid red;*/
 }
 .feed-header-center{
     border:1px solid blue;
