--- a/src/ToDoListPage/MainPage.css
+++ b/src/ToDoListPage/MainPage.css
@@ -1,12 +1,12 @@
 .outer{
-    border: 1px solid black;
+    /*border: 1px solid black;*/
     width: 100%;
     height: 95vh;
     margin: auto;
     margin-top: 20px;
 }
 .outer_date{
-    border: 1px solid red;
+    /*border: 1px solid red;*/
     width: 33%;
     height: 100%;
     float: left;
