--- a/src/ToDoListPage/menubar/Menubar2.css
+++ b/src/ToDoListPage/menubar/Menubar2.css
@@ -1,7 +1,7 @@
 .menubar-box{
     box-sizing: border-box;
     display: inline-block;
-    border: 1px solid pink;
+    /*border: 1px solid pink;*/
     width: 45%;
     height: 100%;
     float: left;
@@ -30,5 +30,5 @@
 .contentArea{
     height: 87%;
     width: 100%;
-    border: 1px solid red;
+    /*border: 1px solid red;*/
 }
