--- a/src/ToDoListPage/calendar/Calendar.css
+++ b/src/ToDoListPage/calendar/Calendar.css
@@ -10,10 +10,15 @@
     margin: auto;
     border-radius: 12px;
     box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
+    text-decoration: none;
   }
-  .react-calendar--doubleView {
+  abbr[title] {
+    text-decoration: none;
+    /* border: #21d4fd 1px solid; */
+  }
+  /* .react-calendar--doubleView {
     width: 700px;
-  }
+  } */
   .react-calendar--doubleView .react-calendar__viewContainer {
     display: flex;
     margin: -0.5em;
@@ -34,6 +39,7 @@
   /*날짜 버튼*/
   .react-calendar button {
     margin: 0;
+    border: 0;
     height: 65px;
     outline: none;
     font-size: 15.5px;
@@ -57,24 +63,28 @@
     font-weight: 600;
     font-size: 22px;
   }
-  .react-calendar__navigation button:disabled {
+  /* .react-calendar__navigation button:disabled {
     background-color: #f0f0f0;
-  }
+  } */
   /* .react-calendar__navigation button:enabled:hover,
   .react-calendar__navigation button:enabled:focus {
      background-color: #e6e6e6; 
   } */
-  /* 요일 버튼*/
+  /* 요일 text*/
   .react-calendar__month-view__weekdays {
     text-align: center;
     text-transform: uppercase;
     font-weight: 600;
-    font-size: 1em;
+    font-size: 17px;
     /*color: #9a31d2;*/
+    text-decoration: underline none;
+    border: none;
+    text-decoration: underline none;
   }
-  /*요일*/
+  /*요일 div*/
   .react-calendar__month-view__weekdays__weekday {
-    padding: 1em;
+    text-decoration: underline none;
+    padding: 15px;
     color: #9a31d2;
   }
   .react-calendar__month-view__weekNumbers .react-calendar__tile {
@@ -87,7 +97,7 @@
   /*공휴일 색*/
   .react-calendar__month-view__days__day--weekend {
     color: #d10000;
-    color: #9a31d2;
+    /* color: #9a31d2; */
   }
   .react-calendar__month-view__days__day--neighboringMonth {
     color: #757575;
@@ -125,7 +135,7 @@
     background: #ffffa9;
     background-image: linear-gradient(60deg, #abecd6 0%, #fee74f 100%);
     background : linear-gradient(60deg, #b721ff 0%, #21d4fd 100%);
-    opacity: 0.5;
+    opacity: 0.1;
   }
   .react-calendar__tile--hasActive {
     background: #76baff;
@@ -154,19 +164,33 @@
   .react-calendar--selectRange .react-calendar__tile--hover {
     background-color: #e6e6e6;
   }
+  /* .dots{
+    border: 1px solid #21d4fd;
+    
+  } */
   .dot {
     height: 10px;
     width: 10px;
     color: 	#FFEE4E;
-    /*background-color: #FDFD36;*/
-    /*border-radius: 50%;*/
-    /*display: flex;*/
-    margin-left: 1px;
+    margin-left: 4px;
+    margin-top: 4px;
+    position: absolute;
+    display: flex;
   }
   .dot2 {
     height: 10px;
     width: 10px;
     margin-left: 1px;
     color: #9a31d2;
+    position: absolute;
+    margin-left: 3px;
+    margin-top: 4px;
+  }
+  .holy{
+    position: absolute;
+    /* display: inline-flex; */
+    font-size: 5px;
+    text-align: center;
+    display: flex;
   }
   
