--- a/src/Member/Login.css
+++ b/src/Member/Login.css
@@ -1,23 +1,31 @@
 .loginArea {
-    border: 2px solid #BA99C3;
-    box-shadow: 0px 0px 3px 3px #BA99C3;
+    border: 1px solid lightgray;
+    /* box-shadow: 0px 0px 2px 2px lightgray; */
     box-sizing: border-box;
-    width: 25rem;
-    height: 35rem;
+    width: 23rem;
     margin: auto;
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
-    left: 0;
+    left: 50%;
     background-color: white;
+    z-index: 8;
+}
+
+.loginAreaHeight {
+    height: 35rem;
+}
+
+.newLoginAreaHeight {
+    height: 36rem;
 }
 
 .logo {
     width: 80%;
     box-sizing: border-box;
     margin: auto;
-    margin-top: 10px;
+    margin-top: 13px;
     text-align: center;
     /* border: 1px solid black; */
 }
@@ -94,3 +102,22 @@
     margin-top: 10px;
     text-align: center;
 }
+
+.toLink {
+    text-decoration: none;
+    color: black;
+}
+
+.toLink:hover {
+    color: #BA99C3;
+}
+
+.newChAlarm {
+    text-align: left;
+    margin-left: 4.5rem;
+    box-sizing: border-box;
+    margin-top: 2px;
+    font-size: 11px;
+}
+
+
