--- a/src/main/calendar/Calendar.css
+++ b/src/main/calendar/Calendar.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Barlow:wght@300&family=Montserrat&display=swap');
+
 abbr[title] {
   text-decoration: none;
 }
@@ -58,6 +58,8 @@ abbr[title] {
     height: 54px;
     margin-bottom: 1em;
     font-family: 'Amatic SC', cursive;
+    font-family: 'PT Sans', sans-serif;
+    font-family: 'Barlow', sans-serif;
     /* background-color: #21d4fd; */
   }
   /*달력 년월 버튼*/
@@ -68,6 +70,12 @@ abbr[title] {
     font-size: 28px;
     text-align: center;
     margin-top: 2px;
+  }
+  .react-calendar__navigation__label{
+    font-size: 40px;
+  }
+  .react-calendar__navigation__label__labelText react-calendar__navigation__label__labelText--from{
+    font-size: 40px;
   }
   /* .react-calendar__navigation button:disabled {
     background-color: #f0f0f0;
