--- a/src/Member/FindPwd.css
+++ b/src/Member/FindPwd.css
@@ -1,7 +1,33 @@
+.findInfoCol {
+    background-color: rgb(236, 236, 236);
+    width: auto;
+    height: 100vh;
+}
+
+.pwdLogo {
+    width: 8rem;
+    box-sizing: border-box;
+    margin: auto;
+    text-align: center;
+    position: absolute;
+    top: -430px;
+    right: 0;
+    bottom: 0;
+    left: -3%;
+    z-index: 5;
+}
+
+.pwdLogo:hover {
+    cursor: pointer;
+}
+
+
 .findInfoWrap {
     box-sizing: border-box;
-    border: 3px solid #BA99C3;
-    width: 50rem;
+    border: 2px solid #BA99C3;
+    border-radius: 15px;
+    background-color: white;
+    width: 45rem;
     height: 30rem;
     margin: auto;
     position: absolute;
@@ -9,5 +35,131 @@
     right: 0;
     bottom: 0;
     left: 0;
+    z-index: 4;
+    /* padding: 50px 80px; */
+    padding-top: 0px;
 }
+
+.pwdTitleArea {
+    /* border: 1px solid red; */
+    width: auto;
+    height: 5rem;
+    margin: auto;
+}
+
+.pwdTitle {
+    border: 4px solid #BA99C3;
+    text-align: center;
+    background-color: #BA99C3;
+    margin: auto;
+    height: 6rem;
+    padding-top: 28px;
+    border-top-right-radius: 11px;
+    border-top-left-radius: 11px;
+    font-size: 33px;
+    color: white;
+    font-weight: bold;
+}
+
+.findInput {
+    /* border: 1px solid red; */
+    margin: 50px 70px;
+    padding-top: 20px;
+}
+
+.findInputP {
+    /* border: 1px solid blue; */
+    margin: auto;
+    text-align: center;
+    padding: 0 30px;
+    padding-left: 10px;
+    font-weight: bold;
+    font-size: 20px;
+    /* margin-right: 30px; */
+}
+
+.findName {
+    margin: auto;
+    margin-bottom: 30px;
+    text-align: left;
+}
+
+.findName>span  {
+    margin-right: 30px;
+}
+
+.inputNameInfo {
+    width: 27.85rem;
+    height: 2.5rem;
+    border: 2px solid #BA99C3;
+    padding-left: 15px;
+}
+
+.findEmail {
+    margin: auto;
+    margin-bottom: 30px;
+    text-align: left;
+}
+
+.findEmail>span {
+    margin-right: 11px;
+}
+
+.findEmailNum {
+    margin: auto;
+    margin-bottom: 30px;
+    text-align: left;
+}
+
+.findEmailNum>span {
+    padding-right: 20px;
+}
+
+
+.inputEmailInfo {
+    width: 23rem;
+    height: 2.5rem;
+    border: 2px solid #BA99C3;
+    padding-left: 15px;
+}
+
+
+.findPwdBtnArea {
+    margin: auto;
+    text-align: center;
+    margin-top: 50px;
+    /* background-color: red; */
+}
+
+
+.findPwdBtn {
+    width: 15rem;
+    height: 3rem;
+    margin: 0 1rem;
+    border: 1px solid lightgray;
+    color: white;
+    font-size: large;
+    font-weight: bold;
+    border-radius: 5px;
+}
+
+
+.findPwdBtn:disabled {
+    background-color: #ba99c383;
+}
+
+.findPwdBtn:enabled {
+    background-color: #BA99C3;
+}
+
+.findPwdBtn:enabled, hover {
+    cursor: pointer;
+}
+
+
+
+
+
+
+
 
