--- a/src/Member/FindPwd.css
+++ b/src/Member/FindPwd.css
@@ -68,24 +68,19 @@
 }
 
 .findInputP {
-    /* border: 1px solid blue; */
     margin: auto;
     text-align: center;
     padding: 0 30px;
     padding-left: 10px;
     font-weight: bold;
     font-size: 20px;
-    /* margin-right: 30px; */
+    margin-right: 30px;
 }
 
 .findName {
     margin: auto;
     margin-bottom: 30px;
     text-align: left;
-}
-
-.findName>span  {
-    margin-right: 30px;
 }
 
 .inputNameInfo {
@@ -105,6 +100,10 @@
     margin-right: 11px;
 }
 
+.findEmail p, .findEmailNum p {
+    margin-left: 7rem;
+}
+
 .findEmailNum {
     margin: auto;
     margin-bottom: 30px;
@@ -112,7 +111,11 @@
 }
 
 .findEmailNum>span {
-    padding-right: 20px;
+    padding-right: 10px;
+}
+
+.findEmailNum input {
+    margin-left: -18px;
 }
 
 
@@ -127,7 +130,7 @@
 .findPwdBtnArea {
     margin: auto;
     text-align: center;
-    margin-top: 50px;
+    margin-top: 30px;
     /* background-color: red; */
 }
 
