--- a/src/main/MainPage.css
+++ b/src/main/MainPage.css
@@ -1,17 +1,17 @@
 
 .outer{
-    /*border: 1px solid black;*/
+    /* border: 3px dotted rgb(12, 227, 12); */
     width: 100%;
     height: 95vh;
     margin: auto;
     margin-top: 20px;
 }
 .outer_date{
-    /*border: 1px solid red;*/
+    /* border: 3px dotted red; */
     width: 33%;
     height: 100%;
     float: left;
-    background-color: gainsboro;
+    background: #e6e6e69e;
 }
 .outer_Temp{
     border: 1px solid green;
