--- a/src/main/calendar/Calendar.css
+++ b/src/main/calendar/Calendar.css
@@ -150,8 +150,8 @@ abbr[title] {
     font-weight: bolder;
     border-radius: 10px;
     border: 3px solid transparent;
-    /* background-image: linear-gradient(60deg, #abecd6 0%, #fee74f 100%);*/
     background : linear-gradient(60deg, #b721ff 0%, #21d4fd 100%); 
+    /* background-image: linear-gradient(60deg, #abecd6 0%, #fee74f 100%);*/
   }
   /*오늘 날짜 hover*/
   .react-calendar__tile--now:enabled:hover,
@@ -182,7 +182,7 @@ abbr[title] {
   .react-calendar__tile--active:enabled:hover,
   .react-calendar__tile--active:enabled:focus {
     background:  #63097f;
-    background : linear-gradient(60deg, #b721ff 0%, #21d4fd 100%);
+    background : linear-gradient(60deg, #abecd6 0%, #fee74f 100%);
   }
   .react-calendar--selectRange .react-calendar__tile--hover {
     background-color: #e6e6e6;
@@ -201,9 +201,9 @@ abbr[title] {
     /* flex: 1; */
   }
   .dot2 {
-    height: 15px;
-    width: 15px;
-    color: #0707beb8;
+    height: 16px;
+    width: 16px;
+    color: #0707bedc;
     position: absolute;
     margin-left: 26px;
     margin-top: 8px;
