--- a/src/template/style/TemplateWrite.css
+++ b/src/template/style/TemplateWrite.css
@@ -1,31 +1,104 @@
-.template-write{
-    background-color: #c780e2;
-    border-radius: 30px;
-    height: 100%;
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Barlow:wght@300&family=Montserrat&display=swap');
 
+.template-write{
+    box-sizing: border-box;
+    /* background-color: #eaeaea6b; */
+    height: 100%;
+    border: 0px solid pink;
+    margin: auto;
+    /* background: rgb(225, 225, 225); */
 }
 .btnBox{
-    margin-top:10px;
-    margin-right: 5px;
+    /* margin-top:10px;
+    margin-right: 5px; */
     display: inline-flex;
+    border: 0px solid #f2ff00;
+    width: 100%;
+    float: right;
+    background: white;
+}
+.btnBack{
+    /* border: 3px dotted rgb(255, 75, 25); */
+    width: 10%;
+    font-size: 35px;
+    padding-left: 10px;
+    cursor: pointer;
+}
+.btns{
+    border: 0px dotted rgb(25, 255, 94);
+    width: 90%;
+    text-align: right;
+    padding-top: 10px;
+}
+.btnReset{
+    margin: 0 3px;
+    background-color: rgb(225, 225, 225);
+}
+.btnSave{
+    margin: 0 10px;
 }
 
 .template-input{
+    margin: auto;
     display: flex;
     padding: 20px;
-    width: 80%;
+    width: 100%;
     height: 15%;
+    border: 0px solid rgb(186, 8, 153);
+    background: rgb(225, 225, 225);
+    background: white;
+    text-align: center;
+    justify-content: center;
 }
 /*.template-input input,#template-input select{*/
 /*    align-content: center;*/
 /*}*/
-.tpdiv1 { grid-area: 1 / 1 / 2 / 2; }
-.tpdiv2 { grid-area: 1 / 2 / 2 / 3; }
-.tpdiv3 { grid-area: 2 / 1 / 3 / 2; }
-.tpdiv4 { grid-area: 2 / 2 / 3 / 3; }
+input{
+    border: none;
+    border-bottom: 2px solid #000000;
+    /* width: 97%; */
+    height: 40px;
+    font-size: 30px;
+    margin-top: 5px;
+    text-align: center;
+}
+input:focus {
+    outline: none;    
+}
+label{
+    font-size: 20px;
+    font-weight: bold;
+}
+select{
+    width: 130px;
+    height: 35px;
+    margin-top: 5px;
+}
+.tpdiv1 { 
+    border: 0px solid rgb(116, 255, 141);
+    grid-area: 1 / 1 / 2 / 2; 
+    padding: 1px 20px 10px;
+}
+.tpdiv2 { 
+    border: 0px solid rgb(116, 255, 141);
+    grid-area: 1 / 2 / 2 / 3; 
+    padding: 1px 20px 10px 10px;
+}
+.tpdiv3 { 
+    border: 0px solid rgb(116, 255, 141);
+    grid-area: 2 / 1 / 3 / 2; 
+    padding: 1px 20px 10px 10px;
+}
+.tpdiv4 { 
+    border: 0px solid rgb(116, 255, 141);
+    grid-area: 2 / 2 / 3 / 3; 
+    padding: 1px 20px 10px 10px;
+}
+
 #templatetodo-input {
     margin: auto;
-    height: 77%;
+    margin-top: 10px;
+    height: 75%;
     width: 80%;
     display: grid;
     grid-template-columns: repeat(7,1fr);
@@ -33,25 +106,52 @@
     column-gap: 1px;
     overflow: scroll;
     /*grid-template-rows: repeat(7, 1fr);*/
+    /* border: 3px solid rgb(8, 171, 186); */
+    border-radius: 10px;
+    padding: 25px 10px 15px;
+    background : linear-gradient(60deg, #b721ff 0%, #21d4fd 100%); 
+}
+#templatetodo-input::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Opera*/
+}
+#templatetodo-input{
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
 }
 #templatetodo-input>div{
-    border: 1px solid black;
-    height: 100px;
-    width: 120px;
-
+    border: 0px dotted black;
+    height: 140px;
+    width: 130px;
+    margin: auto;
+    margin-bottom: 10px;
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
 }
 .days>.content{
-    overflow: hidden;
     text-overflow: ellipsis;
+    text-align: left;
+    margin: auto;
+    border:0px solid #ff5b5b;
+    padding-left: 4px;
 }
 .days{
     background-color: white;
+    border-radius: 10px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .days>.content,.days>.dayCount{
     -ms-user-select: none;
     -khtml-user-select: none;
     -webkit-user-select: none;
     user-select: none;
+}
+.dayCount{
+    height: 20%;
+    border: 0px solid #000000;
+    background-color: #e6e6e69e;
+    padding-top: 2px;
+    font-size: 17px;
 }
 .hiddenbtn{
     display: none;
@@ -61,6 +161,7 @@
 }
 .onSelect{
     background-color: yellow;
+    background-image: linear-gradient(60deg, #8dedcd 0%, #fffc64 100%);
 }
 .insertTodoContent{
     width: 200px;
