--- a/src/challenge/style/ChallengeList.css
+++ b/src/challenge/style/ChallengeList.css
@@ -1,17 +1,26 @@
 .ChallengePage{
-    border: 1px solid pink;
-    display: inline-block;
+    border: 3px solid pink;
     width: 100%;
     height: 100%;
-    margin-left: 10px;
-    /* overflow: scroll; */
+    margin: auto;
+    overflow: scroll;
+    padding: 0 5% 0 5%;
+}
+.ChallengePage>div{
+    box-sizing: border-box;
 }
 .challengeCard{
-    width: 45%;
-    height: 200px;
-    border:1px solid black;
+    width: 500px;
+    height: 220px;
+    border:3px solid black;
     display: inline-block;
-    margin-left:10px ;
-    padding: 5px;
-    position: relative;
+    padding: 10px;
+    margin: 0% 0% 1% 3%;
+}
+.ChallengePage::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Opera*/
+}
+.ChallengePage{
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
 }
