--- a/src/member/NewPwd.css
+++ b/src/member/NewPwd.css
@@ -13,6 +13,7 @@
     padding-left: 30px;
     font-weight: bold;
     font-size: 20px;
+    font-family: Binggrae-Two;
 }
 
 .inputNewPwd {
@@ -40,7 +41,7 @@
     padding-left: 30px;
     font-weight: bold;
     font-size: 20px;
-
+    font-family: Binggrae-Two;
 }
 
 .inputReNewPwd {
