--- a/src/mypage/font/font.css
+++ b/src/mypage/font/font.css
@@ -25,9 +25,10 @@
 
 
 @font-face {
-    font-family: 'Cafe24Ssurround';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2105_2@1.0/Cafe24Ssurround.woff') format('woff');
+    font-family: 'Binggrae-Two';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/Binggrae-Bold.woff') format('woff');
 }
+
 
 @font-face {
     font-family: 'KoPubWorldDotum';
