--- a/src/main/MainPage.css
+++ b/src/main/MainPage.css
@@ -42,13 +42,13 @@
     margin: auto;
     margin-top: 10px;
 }
-.outer_Feed{
+/* .outer_Feed{
     border: 1px solid springgreen;
     width: 85%;
     height: 65%;
     margin: auto;
     margin-top: 0px;
-}
+} */
 .outer_Chall{
     border: 1px solid violet;
     width: 85%;
