--- a/src/main/menubar/Menubar2.css
+++ b/src/main/menubar/Menubar2.css
@@ -10,9 +10,10 @@
     /*padding: 1rem; */
     background: rgb(225, 225, 225);
     width: 100%;
-    height: 13%;
+    height: 7%;
     margin-bottom: 1rem;
     text-align: center;
+    /* margin-left: -100px; */
 }
 .contentArea{
     width: 100%;
