--- a/src/main/MainPage.css
+++ b/src/main/MainPage.css
@@ -11,10 +11,11 @@
     width: 33%;
     height: 100%;
     float: left;
-    background: #e6e6e69e;
+    /* background-color: white; */
+    /* background: #e6e6e69e; */
 }
 .outer_Temp{
-    border: 1px solid green;
+    /* border: 1px solid green; */
     width: 100%;
     height: 100%;
     margin: 5px;
