--- a/src/mypage/MyPageUpdate.css
+++ b/src/mypage/MyPageUpdate.css
@@ -43,9 +43,9 @@
     height: 5%;
 }
 .outer_myContent{
-    border: 1px solid rebeccapurple;
+    /* border: 1px solid rebeccapurple; */
     width: 50%;
-    height: 100%;
+    height: 70%;
     float: right;
     margin-right: 150px;
     box-sizing: border-box;
@@ -56,9 +56,9 @@
     margin-bottom: 15px;
 }
 .outer_myNickUpdate{
-    border: 1px solid seagreen;
+    border: 1px solid gainsboro;
     width: 30%;
-    height: 4%;
+    height: 4.4%;
     margin-left: 70px;
     float: left;
 }
@@ -82,7 +82,7 @@
     margin-left: 70px;
 }
 .outer_Introdeuction{
-    border: 1px solid saddlebrown;
+    border: 1px solid gainsboro;
     width: 85%;
     height: 17%;
     margin-left: 70px;
