--- a/src/challenge/style/ChallengeList.css
+++ b/src/challenge/style/ChallengeList.css
@@ -99,52 +99,109 @@
 
 .chDetail>div{
     box-sizing: border-box;
+    padding-left: 10px;
+    margin-top: 3px;
 }
 .chDetail{
     border: 3px solid pink;
     height: 100%;
+    overflow: scroll;
+}
+.chDetail::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Opera*/
+}
+.chDetail{
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
 }
 .dtBtn{
-    border: 3px solid rgb(59, 21, 212);
+    border: 0px solid rgb(59, 21, 212);
     /* width: 100%; */
-    height: 70px;
+    height: 60px;
 } 
 .btnBack{
-    border: 3px solid rgb(44, 45, 46);
+    border: 0px solid rgb(44, 45, 46);
     float: left;
+    height: 100%;
 }
 .btnss{
-    border: 3px solid skyblue;
+    border: 0px solid skyblue;
     float: right;
-    margin-top: 16px;
+    margin-top: 10px;
+    margin-right: 10px;
 }
 .dtTitle{
-    border: 3px solid skyblue;
+    border: 0px solid skyblue;
     height: 60px;
     text-align: center;
     font-size: 35px;
+    font-weight: bolder;
+    margin-bottom: 10px;
+    background-color: rgb(245, 245, 245);
 }
 .dtDate{
-    border: 3px solid skyblue;
+    border: 0px solid skyblue;
+    font-size: 20px;
+    width: 70%;
+    margin: auto;
 }
 .dtCountUser{
-    border: 3px solid skyblue;
+    border: 0px solid skyblue;
+    font-size: 20px;
+    width: 70%;
+    margin: auto;
 }
 .dtStart{
-    border: 3px solid skyblue;
+    border: 0px solid skyblue;
+    font-size: 22px;
+    font-weight: bold;
+    width: 70%;
+    margin: auto;
 }
 .dtInfo{
-    border: 3px solid skyblue;
+    border: 0px solid skyblue;
+    font-size: 21px;
+    width: 70%;
+    margin: auto;
+    text-align: center;
+    background-color: rgb(245, 245, 245);
 }
-.dtDate{
-    border: 3px solid skyblue;
+.dtInfo2{
+    border: 0px solid skyblue;
+    font-size: 20px;
+    width: 70%;
+    margin: auto;
+    background-color: rgb(245, 245, 245);
 }
 .dtTodo{
-    border: 3px solid skyblue;
+    border: 1px solid skyblue;
+    width: 70%;
+    height: 400px;
+    margin: auto;
+    padding: 20px;
+    overflow: scroll;
+}
+.dtTodo::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Opera*/
+}
+.dtTodo{
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+}
+.chDtTodo{
+    font-size: 30px;
 }
 .dtCountUser2{
-    border: 3px solid skyblue;
+    border: 0px solid skyblue;
+    font-size: 26px;
+    font-weight: bold;
+    width: 70%;
+    margin: auto;
+    background-color: rgb(245, 245, 245);
 }
 .dtUser{
-    border: 3px solid skyblue;
+    border: 1px solid skyblue;
+    font-size: 18px;
+    width: 70%;
+    margin: auto;
 }
